fixed styling issuechatmessage styling and spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -55,29 +55,25 @@
   border-bottom-right-radius: 5px;
   align-items: center;
 } */
-.message {
-  display: flex;
-  /* position: absolute; */
-  /* align-items: center; */
-}
 
 .sent {
-  flex-direction: row-reverse;
+  /* flex-direction: row-reverse; */
   /* background-color: grey; */
 }
 
 .sent p {
-  border-radius: 5px;
+  /* border-radius: 5px;
   color: white;
   background-color: #ff00e6;
   padding: 5px 10px;
+} */
 }
 
 .received p {
-  border-radius: 5px;
+  /* border-radius: 5px;
   color: white;
   background-color: #1086e8;
-  padding: 5px 10px;
+  padding: 5px 10px; */
 }
 
 .dropbtn {
